:bug: Fix email address

--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Sebastian Zhao
 logo: /img/profile.png
-description: ML Researcher
+description: sebbyzhao@berkeley.edu
